# EPTA

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  prisma.config.ts  tsconfig.build.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  oauth-state.util.ts
backend/src/bookmarks/: bookmarks.controller.ts  bookmarks.module.ts  bookmarks.service.ts
backend/src/chats/: chat.gateway.ts  chats.controller.ts  chats.module.ts  chats.service.ts
backend/src/common/: index.ts
backend/src/config/: config.module.ts  configuration.ts  env.validation.ts
backend/src/feeds/: feeds.controller.ts  feeds.module.ts  feeds.service.ts
backend/test/: auth.e2e-spec.ts
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  BREAKPOINTS.md  DATABASE.md  FRONTEND_INTEGRATION.md  PYTHON_SERVICES.md  SECURITY_AUDIT.md
frontend/: .env.example  LCP_OPTIMIZATION_GUIDE.md  LCP_OPTIMIZATION_REPORT.md  LCP_QA_CHECKLIST.md  README.md  index.html  package-lock.json  package.json  test-lcp.html  test-lcp.js  test-server.js
frontend/src/: App.tsx  main.tsx
python-services/: .dockerignore  README.md  ruff.toml
python-services/analytics/: Dockerfile  pyproject.toml
python-services/analytics/app/: main.py  models.py  schemas.py  service.py
python-services/analytics/tests/: test_events.py
python-services/bot/: Dockerfile  README.md  pyproject.toml
python-services/bot/app/: __init__.py  config.py  main.py  schemas.py  service.py
python-services/bot/app/bot/: __init__.py  factory.py  runner.py
python-services/bot/app/handlers/: __init__.py  base.py
python-services/bot/app/middlewares/: __init__.py  dependencies.py
python-services/bot/app/services/: __init__.py  backend_client.py
python-services/bot/app/userbot/: __init__.py  manager.py
python-services/bot/tests/: test_config.py  test_health.py
python-services/moderation/: Dockerfile  pyproject.toml
python-services/recommendation/: Dockerfile  pyproject.toml
python-services/search/: Dockerfile  pyproject.toml
python-services/shared/: pyproject.toml
python-services/shared/epta_common/: __init__.py  app.py  db.py  logging.py  models.py  redis.py  settings.py
(+156 files in other folders)
