[project]
name = "epta-analytics"
version = "0.1.0"
description = "EPTA analytics-service: приём событий и аналитика (каркас)."
requires-python = ">=3.12"
dependencies = [
    "epta-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv.sources]
epta-common = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
