[project]
name = "epta-bot"
version = "0.1.0"
description = "EPTA bot-service: Telegram-бот (aiogram + pyrogram) — каркас для авторизации и не только."
requires-python = ">=3.12"
dependencies = [
    "epta-common",
    # Telegram Bot API + FSM-хранилище в Redis.
    "aiogram>=3.13,<4",
    # MTProto-юзербот (доп. возможности сверх Bot API). Опционален в рантайме,
    # но в образе ставим, чтобы включался заданием кредов без пересборки.
    # Pyrogram — чистый Python (компилятор не нужен). Ускоритель шифрования
    # tgcrypto вынесен в extra `fast`, т.к. это C-расширение (требует toolchain).
    "pyrogram>=2.0",
    # Исходящие вызовы к backend (NestJS REST).
    "httpx>=0.27",
]

[project.optional-dependencies]
# Опциональный ускоритель крипто для pyrogram (C-расширение; нужен компилятор).
fast = [
    "tgcrypto>=1.2",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv.sources]
epta-common = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
