[project]
name = "epta-common"
version = "0.1.0"
description = "Общая инфраструктура Python-сервисов EPTA: конфиг, БД (SQLAlchemy async), Redis, фабрика FastAPI."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "redis>=5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["epta_common"]
